--- a/cartão de visualização/style.css
+++ b/cartão de visualização/style.css
@@ -106,7 +106,7 @@ button.btn-luxury {
 
 .attribution { 
     font-size: 11px; 
-    padding-top: 10px;
+    padding: 10px 0px;
     text-align: center; 
 }
 .attribution a { 
